2012-10-12  Christoph Junghans  <ottxor@gentoo.org>

	* grub-core/Makefile.am (moddep.lst): Use $(AWK) rather than awk.
	Fixes Savannah bug #37558.

2012-10-12  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/configfile.c (GRUB_MOD_INIT): Correct
	description of extract_entries_configfile.

2012-10-05  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Fix spelling of
	preferred_address.
	(grub_cmd_linux): Likewise.
	* grub-core/net/icmp6.c (struct prefix_option): Fix spelling of
	preferred_lifetime.  Update all users.

2012-09-26  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-mknetdir): Move to $prefix/bin.
	Reported by: Daniel Kahn Gillmor.  Fixes Debian bug #688799.

2012-09-26  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Redirect
	errors from grub-probe to /dev/null, not stdout.

2012-09-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_mount): Support AFFS bootblock in
	sector 1.

2012-09-24  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Make the error message if $source_dir
	doesn't exist more useful.

2012-09-22  Colin Watson  <cjwatson@ubuntu.com>

	Fix grub-emu build on FreeBSD.

	* Makefile.util.def (grub-mount): Add LIBGEOM to ldadd.
	* grub-core/net/drivers/emu/emunet.c: Only include Linux-specific
	headers on Linux.
	(GRUB_MOD_INIT): Return immediately on non-Linux platforms; this
	implementation is currently Linux-specific.
	* util/getroot.c (exec_pipe): Define only on Linux or when either
	libzfs or libnvpair is unavailable.
	(find_root_devices_from_poolname): Remove unused path variable.

2012-09-19  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/partmap/msdos.c (pc_partition_map_embed): Revert
	incorrect off-by-one fix from 2011-02-12.  A 62-sector core image
	should fit before end == 63.

2012-09-19  Colin Watson  <cjwatson@ubuntu.com>
